compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_function_return_annotation_with_tuple.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\n/// Exciting documentation\n/// Maybe even multiple lines\nfn append(x: String, y: String) -> #(String, String) {\n  #(x, y)\n}\n"
---
/// Exciting documentation
/// Maybe even multiple lines
fn append(x: String, y: String) -> #(String, String) {
                                     ▔▔↑▔▔▔           
  #(x, y)
}


----- Hover content -----
Scalar(
    String(
        "```gleam\nString\n```\n",
    ),
)
