compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_import_unqualified_type.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nimport example_module.{type MyType, MyType}\nfn main() -> MyType {\n  MyType\n}\n"
---
import example_module.{type MyType, MyType}
                       ▔▔▔▔▔▔▔▔▔▔↑         
fn main() -> MyType {
  MyType
}


----- Hover content -----
Scalar(
    String(
        "```gleam\nMyType\n```\n Exciting documentation\n Maybe even multiple lines\n",
    ),
)
