compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_imported_alias.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: hover
---
Hover {
    contents: Scalar(
        String(
            "```gleam\nfn() -> mod1.T1\n```\n",
        ),
    ),
    range: Some(
        Range {
            start: Position {
                line: 4,
                character: 0,
            },
            end: Position {
                line: 4,
                character: 13,
            },
        },
    ),
}
