compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_imported_labelled_constructor.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nimport wibble.{Wobble}\n"
---
import wibble.{Wobble}
               ↑▔▔▔▔▔ 


----- Hover content -----
Scalar(
    String(
        "```gleam\nfn(Int, label: String) -> wibble.Wobble\n```\n",
    ),
)
