compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_imported_labelled_function.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nimport wibble.{wobble}\n"
---
import wibble.{wobble}
               ↑▔▔▔▔▔ 


----- Hover content -----
Scalar(
    String(
        "```gleam\nfn(Int, label: String) -> a\n```\n",
    ),
)
